@@ -1,0 +1,15 @@
+API Documentation
+=================
+
+.. toctree::
+   :maxdepth: 2
+
+   legacy
+
+Indices and tables
+------------------
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
